<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">SportStats</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">192418660947338</string>

    <!--
     Para encontrar de forma mas facil los Strings aconsejo que los 
	 separemos por pantallas, login, mis actas, etc...
    -->

    <!-- Login -->
    <string name="titleLogin">Login</string>
    <string name="labelLogin">Sign in</string>
    <string name="labelRegister">Register</string>
    <string name="labelSkip">Skip</string>
    <string name="logo">Logo</string>
    <string name="hintLoginMail">mail</string>
    <string name="hintPassword">password</string>

    <!-- Register -->
    <string name="titleRegister">Register</string>
    <string name="labelNewUserRegistration">New User Registration</string>
    <string name="hintName">name</string>
    <string name="hintPassword2">retype password</string>
    <string name="hintMail">mail</string>
    <string name="labelCancel">Cancel</string>

    <!-- My Acts -->
    <string name="titleMyActs">My Acts</string>
    <string name="actionAddAct">Add Act</string>
    <string name="labelTeamHome">C.B. Sports</string>
    <string name="labelTeamHomeScore">130</string>
    <string name="labelTeamGuest">C.B. Stats</string>
    <string name="labelTeamGuestScore">100</string>
    <string name="labelDate">02/01/2014</string>

    <!-- Act Details -->
    <string name="titleActDetails">Act Details</string>

    <!-- Create Act -->
    <string name="titleCreateAct">New Act</string>
    <string name="labelSelectSport">Select a Sport</string>
    <string name="labelStart">Start</string>
    <string name="ToastSpinnerAdapter">You have selected: </string>
    <string name="localTeam">Local team</string>
    <string name="title_activity_activity_basket_data">Act preparation</string>

    <!-- pantalla... -->
    <string name="visitorTeam">Visitor team</string>
    <string name="town">Town</string>
    <string name="mainReferee">Main referee</string>
    <string name="secondReferee">Second referee</string>
    <string name="time">Time</string>
    <string name="date">Date</string>

    <!-- pantalla.... -->
    <string name="general">General</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="start">Start</string>
    <string name="titleBasketData">Basket Data</string>
    <string name="labelStartGame">Start Game!</string>
    <string name="coach">Coach</string>
    <string name="secondCoach">Second Coach</string>
    <string name="secondCoachText">Second coach</string>
    <string name="coachText">Coach </string>

    <!-- Activity Basket Acts -->
    <string name="licNum">Lic Nº</string>
    <string name="playerName">Player name</string>
    <string name="playerNum">Player Nº</string>
    <string name="playerDefaultText">Player Name</string>
    <string name="playerDefaultNumText">00</string>
    <string name="cancel">Cancel</string>
    <string name="licDeafaultText">000</string>
    <string name="selectCaptain">Select as Captain</string>
    <string name="selectNotPlaying">Player not called</string>
    <string name="selectStartingPlayer">Starting player</string>

    <string name="errorPlayerNumberA">Local team has players without number.</string>
    <string name="errorPlayerNumberB">Visitor team has players without number.</string>
    <string name="errorCaptainA">Local team needs a captain.</string>
    <string name="errorStartingPlayersA">Local team needs 4 starter players.</string>
    <string name="errorCaptainB">Visitor team needs a captain.</string>
    <string name="errorStartingPlayersB">Visitor team needs 4 starter players.</string>
    <string name="errorTooManyPlayersA">Local team have more than 12 players.</string>
    <string name="errorTooManyPlayersB">Visitor team have more than 12 players.</string>
    <string name="errorMainRef">Introduce the Main Referee of the match</string>
    <string name="errorTown">Please, introduce a town for the match.</string>
    <string name="errorScndRef">Please, introduce the Second Referee of the match.</string>
    <string name="errorDate">Please, introduce the date of the match.</string>
    <string name="errorTime">Please, introduce the time of the match.</string>
    <string name="errorCoachA">Please, introduce a coach for Local team.</string>
    <string name="errorCoachB">Please, introduce a coach for Visitor team.</string>

    
    
    
    
    <!-- Activity Basket Stats -->
    <string name="menuHelp">Help</string>
    
    <!-- Act Fragment -->
    <string name="titleActFragment">Match</string>
    <string name="labelHome">HOME</string>
    <string name="labelAway">AWAY</string>
    <string name="labelBonus">BONUS</string>
    <string name="labelEnd">END</string>
    <string name="playerFouledOutDialog">The selected player is fouled out. You cannot apply actions.</string>
    <string name="finishActDialog">"The current act will be saved. You won't be able to make changes. Continue?"</string>

    <!-- Player Fragment -->
    <string name="titlePlayerFragment">Event input</string>
    <string name="labelAdd2points">+2 Points</string>
    <string name="labelAdd3points">+3 Points</string>
    <string name="labelRemove2Points">-2 Points</string>
    <string name="labelRemove3Points">-3 Point</string>
    <string name="labelAddFreeThrowMade">+1 FT in</string>
    <string name="labelAddFreeThrowMissed">+1 FT out</string>
    <string name="labelRemoveFreeThrowMade">-1 FT in</string>
    <string name="labelRemoveFreeThrowMissed">-1 FT out</string>
    <string name="labelAddFoul">+1 Foul</string>
    <string name="labelRemoveFoul">-1 Foul</string>
    <string name="labelConfirm">Confirm</string>
    <string name="labelPoints">"Points: "</string>
    <string name="labelFouls">"Fouls: "</string>
    <string name="labelFreeThrows">"Free Throws: "</string>
    <string name="title_activity_activity_basket">ActivityBasketAct</string>
    <string name="title_activity_activity_choose_team_online">ActivityChooseTeamOnline</string>
    <string name="labelSelectLeague">Select league</string>
    <string name="labelSelectLocalTeam">Select local team</string>
    <string name="labelSelectAwayTeam">Select away team</string>
    <string name="title_activity_activity_choose_team_offline">ActivityChooseTeamOffline</string>
    <string name="sameTeams">Choose different teams!</string>
    <string name="emptyTeams">You cannot have empty teams</string>
    
    <!-- Preview Stats Fragment -->
    <string name="headerPreviewStatsHomeTeam">HOME TEAM</string>
    <string name="headerPreviewStatsAwayTeam">AWAY TEAM</string>
    <string name="headerPreviewStatsNumber">Nº</string>
    <string name="headerPreviewStatsName">NAME</string>
    <string name="headerPreviewStatsPoints">PTS</string>
    <string name="headerPreviewStatsFreeThrows">FT</string>
    <string name="headerPreviewStatsFouls">F</string>
    
    <!-- Event List Fragment -->
    <string name="headerFirstQuarter">1st Quarter</string>
    <string name="headerSecondQuarter">2nd Quarter</string>
    <string name="headerThirdQuarter">3rd Quarter</string>
    <string name="headerFourthQuarter">4th Quarter</string>
    <string name="headerOvertime">Overtime</string>
    <string name="headerMinute">Minute</string>
    <string name="optionDeleteEvent">Delete</string>
    <string name="Next">Next</string>
    <string name="matchInfo">Match Info</string>
    <string name="contactingServers">Contacting Servers</string>
    <string name="downloadingData">Downloading data...</string>
    <string name="match">Match</string>
    <string name="localTeam">Local Team</string>
    <string name="vs">Vs</string>
    <string name="visitorTeam">Visitor Team</string>
    
    
    
    
    
    
    
    
    
</resources>
