<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#e6e6e6"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:contentDescription="@string/logo"
            android:src="@drawable/main_logo" >
        </ImageView>

        <EditText
            android:id="@+id/loginMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="center"
            android:hint="@string/hintLoginMail"
            android:inputType="text"
            android:textSize="25sp" >
        </EditText>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="center"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textSize="25sp" >
        </EditText>

        <Button
            android:id="@+id/ButtonLogin"
            style="@style/buttonColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_red_matte"
            android:clickable="true"
            android:text="@string/labelLogin"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/ButtonNewUser"
            style="@style/buttonColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_red_matte"
            android:clickable="true"
            android:text="@string/labelRegister"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/ButtonSkip"
            style="@style/buttonColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_red_matte"
            android:clickable="true"
            android:text="@string/labelSkip"
            android:textStyle="bold" >
        </Button>

        <com.facebook.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            fb:login_text="Entra con Facebook"
            fb:logout_text="Salir" />
    </LinearLayout>

</ScrollView>