<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/square_dark_gray_32" >

            <TextView
                android:id="@+id/leagueText"
                style="@style/HeaderBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/labelSelectLeague"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/leagueSpinnerOffline"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/square_lightgray_64" >

            <TextView
                android:id="@+id/LocalTeamText"
                style="@style/HeaderBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/labelSelectLocalTeam"
                android:textColor="#888888"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <EditText
                android:id="@+id/localTeamEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/labelSelectLocalTeam"
                android:textStyle="bold" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/square_lightgray_64" >

            <TextView
                android:id="@+id/awayTeamText"
                style="@style/HeaderBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/labelSelectAwayTeam"
                android:textColor="#888888"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <EditText
                android:id="@+id/awayTeamEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/labelSelectAwayTeam"
                android:textStyle="bold" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <Button
                android:id="@+id/ButtonStartAct"
                style="@style/HeaderMedium"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/btn_red_matte"
                android:clickable="true"
                android:onClick="newAct"
                android:text="@string/Next"
                android:textStyle="bold" />
        </TableRow>
    </LinearLayout>

</ScrollView>